@@ -1,4 +1,4 @@
-package com.planet_ink.coffee_mud.Abilities.Spells;
+package com.planet_ink.coffee_mud.Abilities.Prayers;
 import com.planet_ink.coffee_mud.core.interfaces.*;
 import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.collections.*;
@@ -18,7 +18,7 @@ import com.planet_ink.coffee_mud.Races.interfaces.*;
 import java.util.*;
 
 /*
-   Copyright 2001-2020 Bo Zimmerman
+   Copyright 2020-2020 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -32,16 +32,16 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class Spell_ClarifyScroll extends Spell
+public class Prayer_ClarifyPrayer extends Prayer
 {
 
 	@Override
 	public String ID()
 	{
-		return "Spell_ClarifyScroll";
+		return "Prayer_ClarifyPrayer";
 	}
 
-	private final static String localizedName = CMLib.lang().L("Clarify Scroll");
+	private final static String localizedName = CMLib.lang().L("Clarify Prayer");
 
 	@Override
 	public String name()
@@ -56,6 +56,12 @@ public class Spell_ClarifyScroll extends Spell
 	}
 
 	@Override
+	public long flags()
+	{
+		return Ability.FLAG_HOLY|Ability.FLAG_UNHOLY;
+	}
+
+	@Override
 	protected int canTargetCode()
 	{
 		return CAN_ITEMS;
@@ -64,7 +70,7 @@ public class Spell_ClarifyScroll extends Spell
 	@Override
 	public int classificationCode()
 	{
-		return Ability.ACODE_SPELL|Ability.DOMAIN_ENCHANTMENT;
+		return Ability.ACODE_PRAYER|Ability.DOMAIN_BLESSING;
 	}
 
 	@Override
@@ -98,15 +104,15 @@ public class Spell_ClarifyScroll extends Spell
 			mob.tell(L("That scroll has nothing on it to enhance."));
 			return false;
 		}
-		boolean arcane=false;
+		boolean divine=false;
 		for(final Ability A : ((Scroll)target).getSpells())
 		{
-			if((A.classificationCode()&Ability.ALL_ACODES)==Ability.ACODE_SPELL)
-				arcane=true;
+			if((A.classificationCode()&Ability.ALL_ACODES)==Ability.ACODE_PRAYER)
+				divine=true;
 		}
-		if(!arcane)
+		if(!divine)
 		{
-			mob.tell(L("The markings on this scroll cannot be clarified by this magic."));
+			mob.tell(L("The markings on this scroll cannot be clarified by this prayer."));
 			return false;
 		}
 
@@ -117,17 +123,17 @@ public class Spell_ClarifyScroll extends Spell
 
 		if(success)
 		{
-			final CMMsg msg=CMClass.getMsg(mob,target,this,somanticCastCode(mob,target,auto),auto?"":L("^S<S-NAME> wave(s) <S-HIS-HER> fingers at <T-NAMESELF>, uttering a magical phrase.^?"));
+			final CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),L(auto?"<T-NAME> appear(s) clarified!":"^S<S-NAME> clarif(ys) <T-NAMESELF>"+inTheNameOf(mob)+".^?"));
 			if(mob.location().okMessage(mob,msg))
 			{
 				mob.location().send(mob,msg);
-				mob.location().show(mob,target,CMMsg.MSG_OK_VISUAL,L("The words on <T-NAME> become more definite!"));
+				mob.location().show(mob,target,CMMsg.MSG_OK_VISUAL,L("The divine markings on <T-NAME> become more definite!"));
 				((Scroll)target).setUsesRemaining(((Scroll)target).usesRemaining()+1);
 			}
 
 		}
 		else
-			beneficialVisualFizzle(mob,target,L("<S-NAME> wave(s) <S-HIS-HER> fingers at <T-NAMESELF>, uttering a magical phrase, and looking very frustrated."));
+			return beneficialWordsFizzle(mob,target,L("<S-NAME> @x1 for clarifying power, but nothing happens.",prayWord(mob)));
 
 		// return whether it worked
 		return success;
