@@ -1,4 +1,4 @@
-package com.planet_ink.coffee_mud.Abilities.Spells;
+package com.planet_ink.coffee_mud.Abilities.Prayers;
 import com.planet_ink.coffee_mud.core.interfaces.*;
 import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.collections.*;
@@ -18,7 +18,7 @@ import com.planet_ink.coffee_mud.Races.interfaces.*;
 import java.util.*;
 
 /*
-   Copyright 2001-2020 Bo Zimmerman
+   Copyright 2020-2020 Bo Zimmerman
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -32,27 +32,23 @@ import java.util.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class Spell_ClarifyScroll extends Spell
+public class Prayer_RechargeRelic extends Prayer
 {
 
 	@Override
 	public String ID()
 	{
-		return "Spell_ClarifyScroll";
+		return "Prayer_RechargeRelic";
 	}
 
-	private final static String localizedName = CMLib.lang().L("Clarify Scroll");
+	private final static String localizedName = CMLib.lang().L("Recharge Relic");
+
+	private static int RECHARGE_AMT = 5;
 
 	@Override
 	public String name()
 	{
 		return localizedName;
-	}
-
-	@Override
-	public int overrideMana()
-	{
-		return 50;
 	}
 
 	@Override
@@ -62,9 +58,21 @@ public class Spell_ClarifyScroll extends Spell
 	}
 
 	@Override
+	public int overrideMana()
+	{
+		return 100;
+	}
+
+	@Override
 	public int classificationCode()
 	{
-		return Ability.ACODE_SPELL|Ability.DOMAIN_ENCHANTMENT;
+		return Ability.ACODE_PRAYER|Ability.DOMAIN_BLESSING;
+	}
+
+	@Override
+	public long flags()
+	{
+		return Ability.FLAG_HOLY|Ability.FLAG_UNHOLY;
 	}
 
 	@Override
@@ -76,37 +84,20 @@ public class Spell_ClarifyScroll extends Spell
 	@Override
 	public boolean invoke(final MOB mob, final List<String> commands, final Physical givenTarget, final boolean auto, final int asLevel)
 	{
-		final Item target=getTarget(mob,null,givenTarget,commands,Wearable.FILTER_ANY);
+		final Item target=getTarget(mob,mob.location(),givenTarget,commands,Wearable.FILTER_ANY);
 		if(target==null)
 			return false;
 
-		if((!(target instanceof Scroll))
-		||(!(target instanceof MiscMagic)))
+		if(!(target instanceof Wand))
 		{
-			mob.tell(L("You can't clarify that."));
+			mob.tell(L("You can't recharge that."));
 			return false;
 		}
 
-		if(((Scroll)target).usesRemaining()>((Scroll)target).getSpells().size())
+		if((((Wand)target).getEnchantType()!=-1)
+		&&(((Wand)target).getEnchantType()!=Ability.ACODE_PRAYER))
 		{
-			mob.tell(L("That scroll can not be enhanced any further."));
-			return false;
-		}
-
-		if(((Scroll)target).getSpells().size()==0)
-		{
-			mob.tell(L("That scroll has nothing on it to enhance."));
-			return false;
-		}
-		boolean arcane=false;
-		for(final Ability A : ((Scroll)target).getSpells())
-		{
-			if((A.classificationCode()&Ability.ALL_ACODES)==Ability.ACODE_SPELL)
-				arcane=true;
-		}
-		if(!arcane)
-		{
-			mob.tell(L("The markings on this scroll cannot be clarified by this magic."));
+			mob.tell(mob,target,null,L("You can't recharge <T-NAME> with this prayer."));
 			return false;
 		}
 
@@ -117,17 +108,41 @@ public class Spell_ClarifyScroll extends Spell
 
 		if(success)
 		{
-			final CMMsg msg=CMClass.getMsg(mob,target,this,somanticCastCode(mob,target,auto),auto?"":L("^S<S-NAME> wave(s) <S-HIS-HER> fingers at <T-NAMESELF>, uttering a magical phrase.^?"));
+			final CMMsg msg=CMClass.getMsg(mob,target,this,verbalCastCode(mob,target,auto),L(auto?"<T-NAME> appear(s) recharged!":"^S<S-NAME> re-enchant(s) <T-NAMESELF>"+inTheNameOf(mob)+".^?"));
 			if(mob.location().okMessage(mob,msg))
 			{
 				mob.location().send(mob,msg);
-				mob.location().show(mob,target,CMMsg.MSG_OK_VISUAL,L("The words on <T-NAME> become more definite!"));
-				((Scroll)target).setUsesRemaining(((Scroll)target).usesRemaining()+1);
+				if(((Wand)target).usesRemaining() >= ((Wand)target).maxUses())
+				{
+					mob.location().show(mob,target,CMMsg.MSG_OK_VISUAL,L("<T-NAME> glow(s) divinely then disintigrates!"));
+					target.destroy();
+				}
+				else
+				{
+					boolean willBreak = false;
+					if((((Wand)target).usesRemaining()+RECHARGE_AMT) > ((Wand)target).maxUses())
+					{
+						willBreak = true;
+						((Wand)target).setUsesRemaining(((Wand)target).maxUses());
+					}
+					else
+					{
+						((Wand)target).setUsesRemaining(((Wand)target).usesRemaining()+RECHARGE_AMT);
+					}
+					if(!(willBreak))
+					{
+						mob.location().show(mob, target, CMMsg.MSG_OK_VISUAL, L("<T-NAME> glow(s) divinely!"));
+					}
+					else
+					{
+						mob.location().show(mob, target, CMMsg.MSG_OK_VISUAL, L("<T-NAME> glow(s) divinely and begins to hum.  It clearly cannot hold more magic."));
+					}
+				}
 			}
 
 		}
 		else
-			beneficialVisualFizzle(mob,target,L("<S-NAME> wave(s) <S-HIS-HER> fingers at <T-NAMESELF>, uttering a magical phrase, and looking very frustrated."));
+			return beneficialWordsFizzle(mob,target,L("<S-NAME> @x1 for enchanting power, but nothing happens.",prayWord(mob)));
 
 		// return whether it worked
 		return success;
