@@ -388,6 +388,13 @@ ensuring that it will grow up to be a player.  The Cleric, by this prayer, \
 endows the baby with both name and spirit, therefore it must be cast before \
 the child learns to walk.
 
+PRAYER_CLARIFYPRAYER=PRAYER_CLARIFY_PRAYER
+PRAYER_CLARIFY_PRAYER=<ABILITY>\
+Usage    : PRAY "CLARIFY PRAYER" [TARGET NAME] \n\r\
+Example  : pray "clarify prayer" scroll\n\r\
+When invoked on a divine scroll, the letters and symbols on the paper \
+gain new clarity.  The scroll then may be re-used more often.
+
 PRAYER_CLEANLINESS=<ABILITY>\
 Usage    : PRAY "CLEANLINESS" [TARGET NAME]\n\r\
 Example  : pray "cleanliness" bob\n\r\
@@ -868,6 +875,16 @@ Example  : pray "empower unholy weapon" sword\n\r\
 This prayer will permanently empower a weapon created with the \
 unholy armament prayer.  The empowerment depends on the casters \
 level and expertise at the time of the casting.
+
+PRAYER_ENCHANTRELIC=PRAYER_ENCHANT_RELIC
+PRAYER_ENCHANT_RELIC=<ABILITY>\
+Usage    : PRAY "ENCHANT RELIC" [PRAYERL NAME] [TARGET NAME] \n\r\
+Example  : pray "enchant relic" "cure light wounds" relic\n\r\
+This prayer allows the cleric to place any prayer he or she knows onto an empty relic. \
+Once placed on the relic, the prayer may be invoked off it using the command word. \
+Enchanting is very draining on the cleric however.  The cleric will lose some \
+experience points for using this prayer.  Enchanting also requires that \
+the cleric be at full mana.
 
 ENERVATE=PRAYER_ENERVATE
 PRAYER_ENERVATE=<ABILITY>\
@@ -1704,6 +1721,24 @@ Example  : pray purify waterskin\n\r\
 The target must be a food or drink source.  The target is neutralized \
 by the gods, making it pure.  Any spell effects, magical properties, \
 poisons, or other special features of the item are dispelled.
+
+PRAYER_READPRAYER=PRAYER_READ_PRAYER
+PRAYERL_READ_PRAYER=<ABILITY>\
+Usage    : PRAY "READ PRAYER" [TARGET NAME] \n\r\
+Example  : pray "read prayer" scroll\n\r\
+This prayer is required in order to be able to invoke prayers off of divine scrolls.  After \
+casting read prayer on a scroll, the scroll may be 'read' normally for the \
+purposes of invoking prayers off of it. Seek help on the 'read' \
+command for more information on scroll use.
+
+PRAYER_RECHARGERELIC=PRAYER_RECHARGE_RELIC
+RECHARGE_RELIC=PRAYER_RECHARGE_RELIC
+PRAYER_RECHARGE_RELIC=<ABILITY>\
+Usage    : PRAYER "RECHARGE PRAYER" [TARGET NAME] \n\r\
+Example  : prayer "recharge relic" statue\n\r\
+This prayer allows the caster to recharge the magical properties of a divine \
+relic.  If a relic ceases to function due to overuse, this prayer can make \
+the relic usable again.  
 
 PRAYER_REFRESH=<ABILITY>\
 Usage    : PRAY "REFRESH" [TARGET NAME]\n\r\
